--- a/Presentations/CompBioRetreat_2017/index.html
+++ b/Presentations/CompBioRetreat_2017/index.html
@@ -107,9 +107,14 @@
 				<section style="border-width:5px; color:Black;">
 					<sectionTitleStyle style="font-family: 'Yanone Kaffeesatz'; font-size:65px; color:Black;">Models of Human Infection Dynamics</sectionTitleStyle><br>
 					<ul style="font-family: 'Droid Serif'; font-size:15px; color:Black; margin-left:50px;">
-						<li>PfSI</li>
-						<li>PfMOI</li>
-						<li>PfLOME</li>
+						<li>
+							PfSI: "Enhanced" SIS Model
+								* fsafsa
+								*	fdafas
+							<img src="./images/MASH_PfSI.png" style="width:50%;">
+						</li>
+						<li>PfMOI: Queuing Model of Superinfection</li>
+						<li>PfLOME: Individual gametocyte Model of Within-host Dynamics</li>
 					</ul>
 					<!-- <img src="./images/MBITES_PDE.gif" style="width:40%; border-radius:5px;"> -->
 				</section>
@@ -124,6 +129,12 @@
 				<section style="border-width:5px; color:Black;">
 					<sectionTitleStyle style="font-family: 'Yanone Kaffeesatz'; font-size:65px; color:Black;"><i>Plasmodium falciparum</i> Transmission Chains</sectionTitleStyle><br>
 					<iframe src="./images/MASH_transmissionChain.html" width="1000px" height="500px" class="foo" scrolling="no"></iframe>
+				</section>
+
+				<section style="border-width:5px; color:Black;">
+					<sectionTitleStyle style="font-family: 'Yanone Kaffeesatz'; font-size:65px; color:Black;">Simulation of Temporal Transmission Networks</sectionTitleStyle><br>
+					<br>
+					<iframe src="./images/MASH_temporalNetwork.html" width="800px" height="500px" class="foo" scrolling="no"></iframe>
 				</section>
 
 				<!-- slide 10 -->
