--- a/Presentations/CompBioRetreat_2017/index.html
+++ b/Presentations/CompBioRetreat_2017/index.html
@@ -121,12 +121,13 @@
 								<br> <font style="font-family: 'Droid Serif'; font-size:12px; color:Black; margin-left:50px;">&#9679; Infection can provoke malarial fever, leads to treatment-seeking behavior.</font>
 								<br> <font style="font-family: 'Droid Serif'; font-size:12px; color:Black; margin-left:50px;">&#9679; Model of basic drug regimen, PE and GS transmission-blocking vaccines.</font>
 							<p>
-							<img src="./images/MASH_PfSI.png" style="width:50%;">
+							<img src="./images/MASH_PfSI.jpg" style="width:30%;">
 							</p>
 						</li>
 						<li>PfMOI: Queuing Model of Superinfection (Multiplicity of Infection)
 							<br> <font style="font-family: 'Droid Serif'; font-size:12px; color:Black; margin-left:50px;">&#9679; Concurrent infections form a G/G/&#8734; queue.</font>
 							<br> <font style="font-family: 'Droid Serif'; font-size:12px; color:Black; margin-left:50px;">&#9679; Models that do not take into account MOI produce overly optimistic elimination timelines at low transmission.</font>
+							<img src="./images/MASH_PfMOI.jpg" style="width:50%;">
 						</li>
 						<li>PfLOME: Individual gametocyte Model of Within-host Dynamics (Lifetime Ontogeny of Malaria Epidemiology)
 								<br> <font style="font-family: 'Droid Serif'; font-size:12px; color:Black; margin-left:50px;">&#9679; Currently developing model of within and between host evolutionary dynamics of <i>Plasmodium falciparum</i>.</font>
