--- a/Presentations/CompBioRetreat_2017/index.html
+++ b/Presentations/CompBioRetreat_2017/index.html
@@ -61,6 +61,7 @@
 						Robert C. Reiner, Jr.<sup style="font-size:10px;">3</sup>,
 						John M. Henry<sup style="font-size:10px;">3</sup>,
 						Daniel Citron<sup style="font-size:10px;">3</sup>,
+						John M. Marshall<sup style="font-size:10px;">1</sup>,
 						David L. Smith<sup style="font-size:10px;">3</sup>
 					<ol style="font-family: 'Droid Serif'; font-size:12.5px; color:Black;">
 						<li>University of California, Berkeley</li>
@@ -151,7 +152,9 @@
 				<section style="border-width:5px; color:Black;">
 					<sectionTitleStyle style="font-family: 'Yanone Kaffeesatz'; font-size:65px; color:Black;">Simulation of Temporal Transmission Networks</sectionTitleStyle><br>
 					<br>
-					<iframe src="./images/MASH_temporalNetwork.html" width="1200px" height="600px" class="foo" scrolling="no"></iframe>
+					<div align="center" text-align="center">
+						<iframe src="./images/MASH_temporalNetwork.html" width="90%" height="600px;" class="foo" scrolling="no" align="middle" display="block"></iframe>
+					</div>
 				</section>
 
 				<!-- slide 10 -->
