clean up presentation; get flow

--- a/Presentations/EpiRetreat_2018/index.html
+++ b/Presentations/EpiRetreat_2018/index.html
@@ -50,8 +50,7 @@
 				<section style="border-width:10px;">
 					<br><sectionTitleStyle style="font-size:45px">Consider a spherical mosquito...</sectionTitleStyle><br>
 					<p>Mathematical Models of Mosquito-borne Pathogen Transmission</p>
-					<!--<p style="font-size:20px; color:#555;">Mosquito Gene Drive Explorer</p>-->
-					<img src="./images/header.png" style="width:75%; border-radius: 5px;">
+					<iframe src="./images/MASH_transmissionChain.html" width="800px" height="325px" class="foo" scrolling="no"></iframe>
 					<br>
 
 					<ol style="font-size:21px; color:#052049;">
@@ -74,7 +73,7 @@
 					<p3>2. Relevant Quantitative Measures of Transmission</p3><br>
 					<p3>3. Simulating Mosquitoes</p3><br>
 					<p3>4. Simulating People</p3><br>
-					<p3>5. Transmission Landscapes</p3><br>
+					<p3>5. Transmission Ecology</p3><br>
 					<p3>6. Application</p3><br>
 				</section>
 				<!-- SLIDE 1 END -->
@@ -102,7 +101,7 @@
 					<br>
 					<img src="./images/transmission_quantities.gif">
 					<br>
-					<p4 style="color: #555; font-size:22.5px;">But reality is not a well-mixed chemostat, how do we build mechanistic models to represent complex disease ecologies?</p4>
+					<p4 style="color: #555; font-size:22.5px;">But reality is not a well-mixed chemostat, how do we build mechanistic models to represent complex disease ecologies while staying true to the underlying mathematical process describing transmission?</p4>
 
 				</section>
 				<!-- SLIDE 3 END -->
@@ -119,6 +118,17 @@
 				<!-- SLIDE 4 END -->
 
 				<!-- SLIDE 5 BEGIN -->
+				<section style="border-width:10px;">
+					<sectionTitleStyle>Continuous-time Discrete Event Simulation</sectionTitleStyle><br><br>
+
+					<p4 style="color: #555; font-size:22.5px;"></p4>
+
+					<img src="./images/MASH_animation.gif" style="width:40%; border-radius:5px;">
+
+				</section>
+				<!-- SLIDE 5 END -->
+
+				<!-- SLIDE 6 BEGIN -->
 				<section style="border-width:10px;">
 					<sectionTitleStyle>Models of Within-host Infection Dynamics</sectionTitleStyle><br><br>
 
@@ -138,9 +148,9 @@
 					</li>
 
 				</section>
-				<!-- SLIDE 5 END -->
+				<!-- SLIDE 6 END -->
 
-				<!-- SLIDE 6 BEGIN -->
+				<!-- SLIDE 7 BEGIN -->
 				<section style="border-width:10px;">
 					<sectionTitleStyle>Transmission Ecology</sectionTitleStyle><br><br>
 
@@ -149,9 +159,9 @@
 					<img src="./images/MASH_StaticNetwork.png" style="width:35%;">
 
 				</section>
-				<!-- SLIDE 6 END -->
+				<!-- SLIDE 7 END -->
 
-				<!-- SLIDE 7 BEGIN -->
+				<!-- SLIDE 8 BEGIN -->
 				<section style="border-width:10px;">
 					<sectionTitleStyle>Landscape Analysis</sectionTitleStyle><br><br>
 
@@ -160,45 +170,38 @@
 					<img src="./images/network_clustering.png" style="width:80%;">
 
 				</section>
-				<!-- SLIDE 7 END -->
+				<!-- SLIDE 8 END -->
 
-				<!-- SLIDE 8 BEGIN -->
+				<!-- SLIDE 9 BEGIN -->
 				<section style="border-width:10px;">
 					<sectionTitleStyle>Models Support Policy</sectionTitleStyle><br><br>
 
-					<p4 style="color: #555; font-size:22.5px;">Spatial targeting of anti-sporozoite vaccine trials on Bioko Island</p4>
+					<p4 style="color: #555; font-size:19px;">Spatial targeting of anti-sporozoite vaccine trials on Bioko Island</p4>
 					<br>
 					<img src="./images/BIOKO_50.gif" style="width:30%; border-radius:0px;">
 					<img src="./images/BIOKO_90.gif" style="width:30%; border-radius:0px;">
 
 				</section>
-				<!-- SLIDE 8 END -->
+				<!-- SLIDE 9 END -->
 
 				<!-- ACKNOWLEDGMENTS -->
 				<section style="border-width:10px;"><br>
 					<img src="./images/berkeley.jpg" style="width:30%; border-radius: 5px;">
 					<img src="./images/ihme.png" style="width:25%; border-radius: 5px;"> <br>
 					<img src="./images/gates.png" style="width:30%; border-radius: 5px;">
-					<img src="./images/DARPA.jpg" style="width:20%; border-radius: 5px;">
+					<!-- <img src="./images/DARPA.jpg" style="width:20%; border-radius: 5px;"> -->
 				</section>
 				<!-- ACKNOWLEDGMENTS -->
 
-				<!-- EXTRA BITS -->
+				<!-- EXTRA BITS 1 BEGIN -->
 				<section style="border-width:10px;">
-					<sectionTitleStyle>Microsimulation</sectionTitleStyle><br><br>
+					<sectionTitleStyle>Statics & Dynamics of <i>P.f</i> Transmission Systems</sectionTitleStyle><br><br>
 
-					<img src="./images/MASH_animation.gif" style="width:40%; border-radius:5px;">
+					<iframe src="https://slwu89.shinyapps.io/StaticsDynamics/" width="1000px" height="600px" class="foo" scrolling="yes"></iframe>
 
 				</section>
+				<!-- EXTRA BITS 1 END -->
 
-				<section style="border-width:10px;">
-					<sectionTitleStyle>Extra 2</sectionTitleStyle><br><br>
-
-					<iframe src="https://slwu89.shinyapps.io/StaticsDynamics/" width="800px" height="500px" class="foo" scrolling="yes"></iframe>
-
-				</section>
-
-				<!-- EXTRA BITS -->
 			</section>
 			<!--.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.--->
 			<!--.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.--->
